# ckanaction

./: Cargo.toml  README.md
docs/: .env.example  README.md  biome.json  components.json  mdx-components.tsx  next.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  source.config.ts  tsconfig.json
docs/app/: global.css  layout.tsx
docs/app/(home)/: page.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/app/og/docs/[...slug]/: route.tsx
docs/components/: api-page.client.tsx  api-page.tsx  codeblock.tsx  tabs.unstyled.tsx
docs/content/docs/: am_following_dataset.mdx  am_following_group.mdx  am_following_user.mdx  api_token_create.mdx  api_token_list.mdx  api_token_revoke.mdx  bulk_update_delete.mdx  bulk_update_private.mdx  bulk_update_public.mdx  config_option_list.mdx  config_option_show.mdx  config_option_update.mdx  current_package_list_with_resources.mdx  dataset_followee_count.mdx  dataset_follower_count.mdx  dataset_follower_list.mdx  dataset_purge.mdx  follow_dataset.mdx  follow_group.mdx  follow_user.mdx  followee_count.mdx  followee_list.mdx  format_autocomplete.mdx  get_site_user.mdx  group_autocomplete.mdx  group_create.mdx  group_delete.mdx  group_followee_count.mdx  group_follower_list.mdx  group_list.mdx  group_list_authz.mdx  group_member_create.mdx  group_member_delete.mdx  group_package_show.mdx  group_patch.mdx  group_purge.mdx  group_show.mdx  group_update.mdx  help_show.mdx  index.mdx  (+92 more)
docs/lib/: get-llm-text.ts  layout.shared.tsx  openapi.ts  openapi.yml  source.ts
docs/scripts/: generate-docs.ts
examples/package-list/: Cargo.toml  README.md
examples/package-list/src/: main.rs
examples/status-show/: Cargo.toml  README.md
examples/status-show/src/: main.rs
src/: lib.rs  main.rs
tests/: general.rs
