[package]
name = "ckanaction"
version = "0.1.2"
edition = "2024"
description = "Rust library crate featuring an API wrapper of the CKAN Action v3 API."
repository = "https://github.com/dathere/ckanaction"
homepage = "https://ckanaction.dathere.com"
license = "Unlicense"
keywords = ["ckan"]
categories = ["api-bindings", "asynchronous"]
exclude = ["/docs"]

[dependencies]
bon = "3.6.3"
reqwest = { version = "0.12.15", features = ["json", "multipart", "stream"] }
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1.45.1", features = ["full"] }
