[package]
name = "ckanaction"
version = "0.1.3"
edition = "2024"
description = "Rust library crate featuring an API wrapper of the CKAN Action v3 API."
repository = "https://github.com/dathere/ckanaction"
homepage = "https://ckanaction.dathere.com"
license = "Unlicense"
keywords = ["ckan"]
categories = ["api-bindings", "asynchronous"]
exclude = ["/docs"]

[dependencies]
bon = "3.8.2"
reqwest = { version = "0.12.28", features = ["json", "multipart", "stream"] }
serde = "1.0.228"
serde_json = "1.0.149"

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
