[package]
name = "ckanaction"
version = "0.2.0"
edition = "2024"
description = "Rust library crate featuring an API wrapper of the CKAN Action v3 API."
homepage = "https://ckanaction.dathere.com"
repository = "https://github.com/dathere/ckanaction"
license = "Unlicense"
keywords = ["ckan"]
categories = ["api-bindings", "asynchronous"]
exclude = ["/docs"]

[dependencies]
bon = "3.9.1"
reqwest = { version = "0.12.28", features = ["json", "multipart", "stream"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
